# alpm_octopi_utils

./: AUTHORS  CMakeLists.txt  Makefile  PKGBUILD  README.md
cmake/: FindVala.cmake  GenerateFindModule.cmake  ValaPrecompile.cmake
examples/: CMakeLists.txt  Makefile
src/: CMakeLists.txt  Makefile  alpm_config.vala  alpm_octopi_utils.vala
vapi/: libalpm.vapi
